--- a/php/index.html
+++ b/php/index.html
@@ -21,27 +21,27 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="loginform.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">LOGIN</a>
-    <a href="register.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">REGISTER</a>
-    <!-- <div class="w3-dropdown-hover w3-hide-small">
+    <a href="newloginform.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">LOGIN</a>
+
+    <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">REGISTER <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="regOwner.html" class="w3-bar-item w3-button">As Asset Owner</a>
-        <a href="regTrustee.html" class="w3-bar-item w3-button">As Trustee</a>
-        <a href="regInheritor.html" class="w3-bar-item w3-button">As Beneficiary</a>
+        <a href="regformOwner.html" class="w3-bar-item w3-button">As Asset Owner</a>
+        <a href="regformTrustee.html" class="w3-bar-item w3-button">As Trustee</a>
+        <a href="regformBeneficiary.html" class="w3-bar-item w3-button">As Beneficiary</a>
       </div>
-    </div> -->
+    </div>
     <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
   </div>
 </div>
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+<!-- <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
   <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
   <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
-</div>
+</div> -->
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
@@ -69,7 +69,7 @@ body {font-family: "Lato", sans-serif}
         Manage your credentials!
         </span> </p>
       </div>
-      <!-- <div class="w3-third">
+      <div class="w3-third">
         <p>Trustee</p>
         <img src="ava2.png" class="w3-round w3-margin-bottom" alt="trustee" style="width:60%">
         <p><span class="info">
@@ -81,7 +81,7 @@ body {font-family: "Lato", sans-serif}
         <img src="ava3.png" class="w3-round" alt="beneficiary" style="width:60%">
         <p><span class="info">
           View the credentials that you inherit!
-          </span> </p> -->
+          </span> </p>
       </div>
     </div>
   </div>
